# open-swe

./: AGENTS.md  CLAUDE.md  CUSTOMIZATION.md  INSTALLATION.md  Makefile  README.md  docker-compose.postgres.yml  pyproject.toml
agent/: prompt.py  server.py  webapp.py
agent/integrations/: agent_sandbox.py
agent/middleware/: __init__.py  ensure_no_empty_msg.py  open_pr.py
agent/repo_memory/: README.md  __init__.py  compiler.py  config.py  daemon.py  delta.py  domain.py  dreaming.py  embeddings.py  events.py  focus.py  lineage.py  matching.py  runtime.py  state.py  sync.py
agent/tools/: __init__.py  commit_and_open_pr.py  get_entity_history.py  get_pr_review_comments.py  jira_comment.py  jira_get_issue.py  jira_get_issue_comments.py  remember_repo_decision.py  search_repo_memory.py  search_similar_code.py
agent/utils/: github.py  github_token.py  jira.py  jira_adf.py  jira_project_repo_map.py  sandbox.py  sandbox_github_auth.py  tracker_context.py
docs/: repo_memory.md  repo_memory_codex_discovery.md  repo_memory_delivery_audit.md  repo_memory_delivery_contract.md
open-swe-repo-memory-gapfill-codex-pack/: AGENTS.md.template  PROMPT_INDEX.md  README.md  RUNBOOK.md  TRACKER.md  manifest.json
open-swe-repo-memory-gapfill-codex-pack/CONTEXT/: FILES_OF_INTEREST.md  IMPLEMENTATION_TARGET.md  TESTING_STRATEGY.md  VERIFIED_GAPS.md
open-swe-repo-memory-gapfill-codex-pack/PROMPTS/: 00_start_here_bootstrap_and_baseline.md  01_red_runtime_handoff_into_state.md  02_green_runtime_handoff_into_state.md  03_refactor_runtime_handoff_into_state.md  04_red_before_model_flush_and_sync.md  05_green_before_model_flush_and_sync.md  (+11 more)
scripts/: probe_repo_memory.py
tests/: conftest.py  test_agent_sandbox_integration.py  test_agent_sandbox_lifecycle.py  test_ensure_no_empty_msg.py  test_get_pr_review_comments.py  test_github_pr_label.py  test_jira_adf.py  test_jira_client.py  test_jira_process.py  test_jira_tools.py  test_jira_webhook.py  test_open_pr_middleware.py  test_prompt_tracker_context.py  test_proxy_auth.py  test_repo_extraction.py  test_sandbox_github_auth.py  test_server_prompt_context.py  test_server_tracker_integration.py  test_tracker_context.py
(+63 files in other folders)
