[project]
name = "open-swe-agent"
version = "0.1.0"
description = "Open SWE Agent - Python agent for automating software engineering tasks"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "deepagents==0.6.6",
    "fastapi>=0.136.3",
    "uvicorn>=0.48.0",
    "httpx>=0.28.1",
    "PyJWT>=2.12.1",
    "cryptography>=48.0.0",
    "langgraph-sdk>=0.4.2",
    "langchain>=1.3.4",
    "langgraph>=1.1.10",
    "markdownify>=1.2.2",
    "langchain-anthropic>=1.4.4",
    "langgraph-cli[inmem]>=0.4.27",
    "langsmith==0.8.3",
    "langchain-openai>=1.2.2",
    "langchain-fireworks>=1.4.2",
    # langchain-fireworks 1.4.2 pins a pre-release fireworks-ai; opt in explicitly so uv resolves it.
    "fireworks-ai>=1.2.0a71",
    "langchain-daytona>=0.0.5",
    "langchain-modal>=0.0.3",
    "langchain-runloop>=0.0.4",
    "exa-py>=2.13.0",
    "langchain-google-genai>=4.2.4",
    "asyncpg>=0.30.0",
    "openai>=2.29.0",
    "tree-sitter>=0.25.2",
    "tree-sitter-python>=0.25.0",
    "tree-sitter-typescript>=0.23.2",
    "tree-sitter-go>=0.25.0",
    "tree-sitter-rust>=0.24.2",
]

[project.scripts]
repo-memory-dreaming-daemon = "agent.repo_memory.daemon:main"
repo-memory-migrate = "agent.repo_memory.persistence.migrations:main"
repo-memory-probe = "scripts.probe_repo_memory:main"

[project.optional-dependencies]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.4.0",
    "ruff>=0.15.15",
    "Pygments>=2.20.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["agent", "scripts"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
